kubernetes/archive/deploy/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: grocy
    release: grocy
  type: ClusterIP
