kubernetes/archive/deploy/grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: grocy
spec:
  rules:
  - host: grocy.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: grocy
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
